- Display group cols vertically when subform layout is vertical

= 3.6.0
- Fix i18n at ruby 3.0.0
- Add list helper for bitfield column, so it display labels of selected checkboxes in list
- Support rails 6.0

= 3.6.0.rc2
- Fix subform crud in subform subgroup when controller is embedded
- Fix sorting for mongoid models, broken in 3.6.0.rc1
- Improve add_new option, allow to change subform columns (with helper override calling super and add columns to locals argument)
- Support add_new option for record_select or radio form_ui
- Support add_new option for polymorphic associations (add_new may be array with class names to allow add new, or true to allow add new for any model)
- Support description for columns displayed as subform
- Don't mess with history if current page is not using activescaffold when is loaded
- Fix changing sort_by per request when threadsafe is enabled

= 3.6.0.rc1
- Cleanup: deprecate ActiveScaffold.set_defaults for ActiveScaffold.defaults, rename some setters
- Fix adding new action links on request with threadsafety enabled
- Fix iterating in config.columns with threadsafety enabled
- Fix changing pagination enabled/disabled with threadsafety enabled
- Allow create action in has_many through singular association
- Display no options in radio form_ui when no option is available, so column can be refreshed with update_columns
- Add as_main_div_data to override data attributes on main div
- Add loading indicator to embedded scaffolds, display error if fails
- Fix race condition in threadsafe mode with delayed setup
- Add ActiveScaffold::Config::Core.after_config_callbacks, so custom methods or procs can be added to be called after active_scaffold config block (used by bitfields bridge)
- Display loading indicator at bottom on auto pagination
- List rendering speed up
- Remove font family from CSS, it was preventing from changing it easily in body
- Fix search for mongoid models in with threadsafety enabled