@@ -1,4 +1,5 @@
 - Display group cols vertically when subform layout is vertical
+- Fix html attributes for input datetime on field search, when jquery ui is not used
 
 = 3.6.0
 - Fix i18n at ruby 3.0.0
